# local-agent-orchestrator

./: .gitignore  README.md  pyproject.toml  run_server.sh
configs/: defaults.yaml  gsm8k.yaml
external_tools/: __init__.py  tool_schemas.yaml
llm/: run.py
local_workflow/: agent.py  environment.py
local_workflow/local_logging/: utils.py
templates/: action_response.jinja  system_prompt.jinja  thinking_response.jinja  user_prompt.jinja
