[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local_workflow"
version = "0.0.1"
description = "flexible framework for setting up agentic workflows"
authors = [
  { name = "Andrew", email = "awang116@jhu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["local_workflow"]
